<resources>
    <string name="app_name">LoginAndSignUp</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="new_user_register_here">New user?Register here...</string>
    <string name="already_user">Already have account?Login here...</string>
    <string name="signUp">Signup</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="this_is_subheading_for_app_or_may_be_intro_to_app">this is subheading for app or may be intro to app</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>